# image-resize-api

./: .gitignore  Cargo.toml  settings.yaml
src/: http.rs  image_resizer.rs  logging.rs  main.rs  settings.rs
