[package]
name = "image-resize-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.11.0"
http = "0.2.4"
image = "0.23.14"
serde = { version = "1.0.126", features = ["derive"] }
tokio = { version = "1.8.0", features = ["full"] }
tracing = "0.1.26"
tracing-appender = "0.1.2"
tracing-futures = "0.2.5"
tracing-log = "0.1.2"
tracing-subscriber = "0.2.19"
uuid = { version = "0.8.2", features = ["v4"] }
warp = "0.3.1"
